<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ceres_intrinsic_camera_calibrator</name>
  <version>0.0.1</version>
  <description>The ceres_intrinsic_camera_calibrator package</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>libceres-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>pybind11-dev</depend>
  <depend>rclcpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
